# IchimCosmin_StefanoaiaMihai_NIM

./: .gitignore  README.md  montecarlo.py  run_script.py
H1/: CMakeLists.txt  engine.cpp  engine.h  funclib.h  genome.h  lut.h  lut_arr.h  main.cpp
H1/fpm/: fixed.hpp
H1P/: hw.py
H2/: functions.py  main.py  pso.py  requirements.txt  run.py  stats.py  test.py
H3/: run.py
H3/AC/: main.py  temp_main.py
H3/GA/: ga_main.py  main.py
H3/PSO/: __init__.py  pso_main.py
